--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -3,13 +3,13 @@
 <form action="/people/new" method="post">
     <div class="row">
         <div class="col">
-            <label for="Height_Inches">City Name</label>
-            <input id="Height_Inches" type="text" class="form-control" placeholder="Height Inches" name="Height Inches" value="{{person.Height_Inches}}">
+            <label for="Height_Inches">Height Inches</label>
+            <input id="Height_Inches" type="text" class="form-control" placeholder="Height Inches" name="Height Inches">
         </div>
         <div class="col">
-            <label for="Weight_Pounds">City Abbreviation</label>
+            <label for="Weight_Pounds">Weight Pounds</label>
             <input id="Weight_Pounds" type="text" class="form-control" placeholder="Weight Pounds"
-                   name="Weight Pounds" value="{{person.Weight_Pounds}}">
+                   name="Weight Pounds">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Save</button>
