--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -2,16 +2,16 @@
 {% block content %}
 
 <div class="card" class="m-5 p-2">
+    <h5 class="card-title">{{ person.Index }}</h5>
 
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">{{ person.Height_Inches }}</li>
-        <li class="list-group-item">{{ person.Weight_Pounds }}</li>
+        <li class="list-group-item">Height: {{person.Height_Inches}}</li>
+        <li class="list-group-item">Weight: {{person.Weight_Pounds}}</li>
     </ul>
     <div class="card-body">
-        <a href="/edit/{{person.id}}" class="card-link btn btn-primary">Edit</a>
+        <a href="/edit/{{person.Index}}" class="card-link btn btn-primary">Edit</a>
     </div>
+<form action="/delete/{{person.Index}}" method="post"><button type="submit" class="btn btn-danger">Delete</button></form>
 </div>
-<form action="/delete/{{person.id}}" method="post"><button type="submit" class="btn btn-danger">Delete</button></form>
-
 
 {% endblock %}
