--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/edit/{{person.Index}}" method="post">
+<form action="/edit/{{person.Index}}" method="POST">
     <div class="row">
         <div class="col">
             <label for="Height_Inches">Height Inches</label>
-            <input id="Height_Inches" type="text" class="form-control" placeholder="Height Inches" name="Height Inches" value="{{person.Height_Inches}}">
+            <input id="Height_Inches" type="text" class="form-control" placeholder="Height_Inches" name="Height_Inches" value="{{person.Height_Inches}}">
         </div>
         <div class="col">
             <label for="Weight_Pounds">Weight Pounds</label>
-            <input id="Weight_Pounds" type="text" class="form-control" placeholder="Weight Pounds"
-                   name="Weight Pounds" value="{{person.Weight_Pounds}}">
+            <input id="Weight_Pounds" type="text" class="form-control" placeholder="Weight_Pounds"
+                   name="Weight_Pounds" value="{{person.Weight_Pounds}}">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Save</button>
