--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -1,18 +1,18 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/people/new" method="post">
+<form action="/people/new" method="POST">
     <div class="row">
         <div class="col">
             <label for="Height_Inches">Height Inches</label>
-            <input id="Height_Inches" type="text" class="form-control" placeholder="Height Inches" name="Height Inches">
+            <input id="Height_Inches" type="text" class="form-control" placeholder="Height_Inches" name="Height_Inches">
         </div>
         <div class="col">
             <label for="Weight_Pounds">Weight Pounds</label>
-            <input id="Weight_Pounds" type="text" class="form-control" placeholder="Weight Pounds"
-                   name="Weight Pounds">
+            <input id="Weight_Pounds" type="text" class="form-control" placeholder="Weight_Pounds"
+                   name="Weight_Pounds">
         </div>
     </div>
-    <button type="submit" class="btn btn-success">Save</button>
+    <button type="submit" class="btn btn-success">Add New Entry</button>
 
 </form>
 
