--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% inlcude "nav.html" %}
 {% block content %}
 <form action="/edit/{{person.Index}}" method="POST">
     <div class="row">
